updated angular18 project

--- a/Angular18Project/src/app/components/change-detection/change-detection.component.html
+++ b/Angular18Project/src/app/components/change-detection/change-detection.component.html
@@ -2,22 +2,25 @@
 
 <div>
   <p>
-    Questa pagina contiene due elmenti: un timer che aggiorna un counter e un
-    bottone che aggiorna un counter. Serve a capire il funzionamento della
-    change detection.
+    Questa pagina contiene due elmenti: un timer che aggiorna un counter e un bottone che aggiorna un counter. Serve a capire il
+    funzionamento della change detection.
   </p>
 
   <p>
-    Se si attiva la CDR OnPush sarà necessario sostituire quell'elemento timer
-    con qualcosa di reattivo: un signal o un behaviorsubject/subject.
+    Se si attiva la CDR OnPush sarà necessario sostituire quell'elemento timer con qualcosa di reattivo: un signal o un
+    behaviorsubject/subject.
   </p>
 </div>
 
 <div>
-  <p><strong>Timer counter:</strong> {{ timer }}</p>
-  <p><strong>Button click counter:</strong> {{ clicks }}</p>
+  <p>
+    <strong>Timer counter:</strong>
+    {{ timer() }}
+  </p>
+  <p>
+    <strong>Button click counter:</strong>
+    {{ clicks }}
+  </p>
 
-  <button mat-raised-button color="primary" (click)="clicks = clicks + 1">
-    Click me
-  </button>
+  <button mat-raised-button color="primary" (click)="clicks = clicks + 1">Click me</button>
 </div>
