--- a/Angular18Project/src/app/components/deferred-views/husky/husky.component.html
+++ b/Angular18Project/src/app/components/deferred-views/husky/husky.component.html
@@ -1,5 +1,4 @@
 <strong>Husky + lint-staged</strong>
 <br />
-Husky e lint-staged sono una accoppiata vincente per formattare e verificare la
-presenza di errori nel codice, prima di effettuare un commit. In questo modo
-quello che finisce su un branch è già perfetto così!
+Husky e lint-staged sono una accoppiata vincente per formattare e verificare la presenza di errori nel codice, prima di effettuare un
+commit. In questo modo quello che finisce su un branch è già perfetto così!
