--- a/Angular18Project/src/app/components/deferred-views/prettier/prettier.component.html
+++ b/Angular18Project/src/app/components/deferred-views/prettier/prettier.component.html
@@ -1,6 +1,4 @@
 <strong>Prettier</strong>
 <br />
-Prettier è un code formatter, cioè una piattaforma che permette di formattare
-automaticamente i codici sorgenti fornendo uno standard unico da adottare
-all'interno dei team di sviluppatori. Supporta diversi linguaggi e si integra
-facilmente con i maggiori IDE.
+Prettier è un code formatter, cioè una piattaforma che permette di formattare automaticamente i codici sorgenti fornendo uno standard unico
+da adottare all'interno dei team di sviluppatori. Supporta diversi linguaggi e si integra facilmente con i maggiori IDE.
