--- a/Angular18Project/src/app/components/image/image.component.html
+++ b/Angular18Project/src/app/components/image/image.component.html
@@ -5,27 +5,20 @@
   <p>La procedura di ottimizzazione che utilizzeremo sarà la seguente:</p>
   <ul>
     <li>
-      usare la componente NgOptimizedImage che permette di forzare le best
-      practice sulle immagini in modo da ottimizzare la SEO ed evitare i layout
-      shifting
+      usare la componente NgOptimizedImage che permette di forzare le best practice sulle immagini in modo da ottimizzare la SEO ed evitare
+      i layout shifting
     </li>
-    <li>
-      usare una CDN per fornire l'immagine in più formati e dimensioni per
-      ottimizzarne il caricamento
-    </li>
+    <li>usare una CDN per fornire l'immagine in più formati e dimensioni per ottimizzarne il caricamento</li>
   </ul>
-
   <div>
-    <img src="/assets/immagine_test.jpg" />
+    <img ngSrc="/assets/immagine_test.jpg" ngSrcset="200w, 600w, 800w, 1080w" width="800" height="450" alt="Test image" priority />
   </div>
 
   <p>
-    <strong
-      >Come si può vedere l'immagine viene caricata con le dimensioni massime,
-      non possiede un attributo alt che descriva il contenuto, non possiede
-      delle dimensioni definite. In qualunque dispositivo viene caricata a
-      grandezza naturale e quindi con il massimo del peso (vedi chrome dev
-      tools- tab network)</strong
-    >
+    <strong>
+      Come si può vedere l'immagine viene caricata con le dimensioni massime, non possiede un attributo alt che descriva il contenuto, non
+      possiede delle dimensioni definite. In qualunque dispositivo viene caricata a grandezza naturale e quindi con il massimo del peso
+      (vedi chrome dev tools- tab network)
+    </strong>
   </p>
 </div>
