--- a/Angular18Project/src/app/components/unsubscribe/unsubscribe.component.html
+++ b/Angular18Project/src/app/components/unsubscribe/unsubscribe.component.html
@@ -1,16 +1,12 @@
 <h2>Pagina unsubscribe</h2>
 
 <p>
-  Questa sezione vuole mostrare l'importanza di effettuare l'unsubscribe delle
-  subscriptions (e il clear degli intervalli) in modo da evitare i cosiddetti
-  "memory leaks" ossia delle situazioni in cui la memoria usata continua a
-  salire fino a provocare dei crash applicativi
+  Questa sezione vuole mostrare l'importanza di effettuare l'unsubscribe delle subscriptions (e il clear degli intervalli) in modo da
+  evitare i cosiddetti "memory leaks" ossia delle situazioni in cui la memoria usata continua a salire fino a provocare dei crash
+  applicativi
 </p>
 
-<p>
-  e' fondamenteale ricordarsi di effettuare l'unsubscribe delle pipes RxJS. Le
-  modalità sono le seguenti:
-</p>
+<p>e' fondamenteale ricordarsi di effettuare l'unsubscribe delle pipes RxJS. Le modalità sono le seguenti:</p>
 
 <ul>
   <li>Chiamare .unsubscribe()</li>
@@ -20,5 +16,5 @@
 
 <h3><strong>Utente senza unsubscribe:</strong></h3>
 <p>
-  {{ users | json }}
+  {{ users$ | async | json }}
 </p>
