--- a/Angular18Project/src/app/components/uploader-dnd/uploader-dnd.component.html
+++ b/Angular18Project/src/app/components/uploader-dnd/uploader-dnd.component.html
@@ -1,24 +1,19 @@
-<input
-  #fileInput
-  type="file"
-  [accept]="accept"
-  [multiple]="false"
-  class="hidden"
-  (change)="handleFileChange($event)"
-/>
+<input #fileInput type="file" [accept]="accept" [multiple]="false" class="hidden" (change)="handleFileChange($event)" />
 
 <div class="uploader__wrapper">
-  <div *ngIf="!value" class="uploader__empty" (click)="fileInput.click()">
-    <span
-      >Click
-      <br />
-      or
-      <br />
-      drop files here</span
-    >
-  </div>
-
-  <div *ngIf="value" class="uploader__filled">
-    <mat-icon>image</mat-icon>
-  </div>
+  @if (!value) {
+    <div aria-hidden="true" class="uploader__empty" (click)="fileInput.click()" (keyup)="fileInput.click()">
+      <span>
+        Click
+        <br />
+        or
+        <br />
+        drop files here
+      </span>
+    </div>
+  } @else {
+    <div class="uploader__filled">
+      <mat-icon>image</mat-icon>
+    </div>
+  }
 </div>
