--- a/Angular18Project/src/app/components/homepage/homepage.component.scss
+++ b/Angular18Project/src/app/components/homepage/homepage.component.scss
@@ -19,7 +19,7 @@ h6 {
 }
 
 .terminal::before {
-  content: "\2022 \2022 \2022";
+  content: '\2022 \2022 \2022';
   position: absolute;
   top: 0;
   left: 0;
@@ -34,7 +34,12 @@ h6 {
 }
 
 .terminal pre {
-  font-family: SFMono-Regular, Consolas, Liberation Mono, Menlo, monospace;
+  font-family:
+    SFMono-Regular,
+    Consolas,
+    Liberation Mono,
+    Menlo,
+    monospace;
   color: white;
   padding: 0 1rem 1rem;
   margin: 0;
