--- a/Angular18Project/src/app/components/modal/confirm-dialog/confirm-dialog.component.html
+++ b/Angular18Project/src/app/components/modal/confirm-dialog/confirm-dialog.component.html
@@ -2,6 +2,4 @@
 
 <p>Click the button below to close</p>
 
-<button mat-raised-button color="primary" mat-dialog-close>
-  Click to close
-</button>
+<button mat-raised-button color="primary" mat-dialog-close>Click to close</button>
